@startuml class-backend-staff
' Propósito: jerarquía OO del módulo staff (Doctor + disponibilidad por bloques concretos) — modelos, repos y services funcionales
' Última actualización: 2026-06-20
' Código de referencia: backend/app/modules/staff/ y backend/app/shared/

!theme plain
skinparam classAttributeIconSize 0
skinparam packageStyle rectangle
skinparam nodesep 50
skinparam ranksep 70
skinparam defaultFontSize 13
hide empty members

title Class — Backend · Staff module

' ─────────────────────────────────────────────────────────────
' Shared layer — mixins y base genérica
' ─────────────────────────────────────────────────────────────
package "app.shared" <<Frame>> {
  together {
    class PrimaryKeyMixin <<mixin>> {
      +id: str <<UUID>>
    }
    class ActiveMixin <<mixin>> {
      +active: bool
    }
    class SoftDeleteMixin <<mixin>> {
      +deleted_at: datetime?
    }
    class TimestampMixin <<mixin>> {
      +created_on: datetime
      +created_by: str
      +updated_on: datetime
      +updated_by: str
    }
  }

  abstract class "BaseRepository<ModelT>" as BaseRepository {
    +ALLOWED_FIELDS: set<str>
    +model: type<ModelT>
    --
    +get_by_id(db, id, ...): ModelT?
    +get_paginated(db, query_request, load): tuple<list, int>
    +create(db, obj): ModelT
    +update(db, obj, changes): ModelT
    +soft_delete(db, obj): None
  }
}

' ─────────────────────────────────────────────────────────────
' Domain models — SQLAlchemy ORM
' ─────────────────────────────────────────────────────────────
package "app.modules.staff.models" <<Frame>> {
  together {
    class Doctor <<entity>> {
      +user_id: str <<unique, FK>>
      +cmp_code: str?
      +bio: str?
      +photo_url: str?
      +signature_url: str?
      +slot_duration_min: int = 30
      --
      +user: User <<1:1>>
      +branches: list<Branch> <<M:N>>
      +verticals: list<Vertical> <<M:N>>
      +availability: list<DoctorAvailability> <<1:N, lazy=raise>>
    }

    class DoctorAvailability <<entity>> {
      +doctor_id: str <<FK>>
      +branch_id: str <<FK>>
      +office_id: str <<FK>>
      +date: date
      +opens_at: time
      +closes_at: time
      --
      ' Bloque CONCRETO por fecha (ADR-007). NO day_of_week, NO is_available, NO recurrencia.
      ' CHECK (closes_at > opens_at)
    }
  }
}

' ─────────────────────────────────────────────────────────────
' External (informativo)
' ─────────────────────────────────────────────────────────────
class "User" as User <<entity,external>> #lightgrey
class "Branch" as Branch <<entity,external>> #lightgrey
class "Office" as Office <<entity,external>> #lightgrey
class "Vertical" as Vertical <<entity,external>> #lightgrey

' ─────────────────────────────────────────────────────────────
' Repositories
' ─────────────────────────────────────────────────────────────
package "app.modules.staff.repositories" <<Frame>> {
  together {
    class DoctorRepository {
      +ALLOWED_FIELDS: set
      --
      +get_by_user_id(db, user_id): Doctor?
      +get_full(db, doctor_id): Doctor?  ' eager: user, branches, verticals
      +list_active(db, branch_id?, vertical_id?): list<Doctor>
      +count_branches_map / count_verticals_map (batch, no N+1)
    }
    class DoctorAvailabilityRepository {
      +ALLOWED_FIELDS: set
      --
      +list_for_doctor(db, doctor_id, frm, to): list<DoctorAvailability>
      +list_for_doctor_on_date(db, doctor_id, date): list<DoctorAvailability>
    }
  }
}

' ─────────────────────────────────────────────────────────────
' Services — módulos funcionales (NO clases)
' ─────────────────────────────────────────────────────────────
package "app.modules.staff.services" <<Frame>> {
  together {
    class "doctor.py" as doc_svc <<module>> {
      +get_by_id(db, doctor_id)
      +list_paginated(db, query)
      +list_active(db, branch_id?, vertical_id?)
      +create(db, payload, actor_id)  ' NESTED: crea User(role DOCTOR)+Doctor en 1 tx
      +update(db, doctor_id, payload, actor_id)  ' incluye branch_ids, vertical_ids (replace M:N)
      +soft_delete(db, doctor_id, actor_id)  ' NO toca User
    }

    class "availability.py" as av_svc <<module>> {
      +list_for_doctor(db, doctor_id, frm, to)
      +bulk_create(db, doctor_id, blocks, actor_id)
      +update(db, doctor_id, block_id, payload, actor_id)
      +delete(db, doctor_id, block_id, actor_id)  ' ownership 404
      --
      ' Valida invariantes 1-3 (office∈branch, doctor∈branch, no-overlap por date)
    }

    class "me.py" as me_svc <<module>> {
      +get_me(db, current_user)  ' resuelve doctor desde user_id; 403 NOT_A_DOCTOR
      +update_me(db, current_user, payload)  ' solo bio/photo/signature/slot
      +list/create/update/delete my availability
    }
  }
}

' ─────────────────────────────────────────────────────────────
' Herencia de mixins (las 2 entidades heredan los 4)
' ─────────────────────────────────────────────────────────────
PrimaryKeyMixin <|-- Doctor
ActiveMixin     <|-- Doctor
SoftDeleteMixin <|-- Doctor
TimestampMixin  <|-- Doctor

PrimaryKeyMixin <|-- DoctorAvailability

note bottom of TimestampMixin
  **Patrón aplicado a las 2 entidades**
  ""Doctor"" y ""DoctorAvailability""
  heredan los 4 mixins:
  ""PrimaryKeyMixin, ActiveMixin,""
  ""SoftDeleteMixin, TimestampMixin""
  (Sólo se dibujan algunas herencias.)
end note

' Repos extienden el genérico
BaseRepository <|-- DoctorRepository               : "<Doctor>"
BaseRepository <|-- DoctorAvailabilityRepository   : "<DoctorAvailability>"

' Relaciones de dominio
Doctor "1" -- "1" User                       : "user_id\n(1:1)"
Doctor "1" -- "0..*" DoctorAvailability       : "bloques"
DoctorAvailability "*" -- "1" Branch          : "en sede"
DoctorAvailability "*" -- "1" Office          : "en consultorio"
Doctor "*" -- "*" Branch                      : "doctor_branch"
Doctor "*" -- "*" Vertical                    : "doctor_vertical"

' Repos manejan su modelo
DoctorRepository                ..> Doctor               : manages
DoctorAvailabilityRepository    ..> DoctorAvailability   : manages

' Services usan repos
doc_svc ..> DoctorRepository
av_svc  ..> DoctorAvailabilityRepository
av_svc  ..> DoctorRepository
me_svc  ..> DoctorRepository
me_svc  ..> DoctorAvailabilityRepository

' Notas
note right of Doctor
  **ADR-002**: 1:1 con User (user_id UNIQUE).
  Creación NESTED (user+doctor en 1 tx).

  ""slot_duration_min"" es el grano del
  calendario; ""scheduling"" reserva 1+
  slots contiguos para cubrir
  ""product.duration_min"".
end note

note right of DoctorAvailability
  **Bloques concretos por fecha** (ADR-007).
  Reemplaza Pattern (recurrente) + Override.
  Endpoints: GET ?from=&to= (rango),
  POST (alta masiva), PUT/{id}, DELETE/{id}.
  UI = grilla semanal (staff/ui.md).
end note

note bottom of av_svc
  **Invariantes validados aquí**:
  1) office pertenece a branch    (OFFICE_NOT_IN_BRANCH)
  2) doctor asignado a branch     (DOCTOR_NOT_IN_BRANCH)
  3) sin solapamiento por date    (AVAILABILITY_OVERLAP)
  (#4 "cabe en OfficeOperatingHours" lo
   maneja scheduling, no se bloquea aquí.)
  Lanza ""BadRequestException"" con ""code"".
end note

note bottom of me_svc
  **Self-service /me** (role DOCTOR):
  resuelve el doctor desde
  ""CurrentAuth.user.id"".
  Sin perfil → 403 NOT_A_DOCTOR.
end note

@enduml
